[WIP] Sonar fixes